# structured

./: .cursorrules  .gitignore  Makefile  README.md  alembic.ini  bun.lockb  package.json  pyproject.toml
.custom_schemas/: Album.json
backend/: __init__.py  database.py  loggers.py  logging.py  main.py  schemas.py  settings.py  structured_outputs.py
backend/migrations/: env.py
backend/migrations/versions/: 20240105_001_add_version_tracking.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.css  App.tsx  config.ts  index.css
frontend/src/components/: theme-toggle.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  card.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx
frontend/src/features/structured-output/: StructuredOutputGenerator.tsx  types.ts
frontend/src/features/structured-output/components/: ErrorDisplay.tsx  GenerationHistory.tsx  HistoryPanel.tsx  InputSection.tsx  OutputDisplay.tsx  SchemaSelector.tsx  SchemaVersionHistory.tsx
frontend/src/lib/: theme.ts
frontend/src/styles/: fonts.css  fonts.ts
migrations/: env.py
migrations/versions/: 20250105_2d221dd21492_add_schema_versioning.py
src/structured/: __init__.py
