[project]
name = "structured"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "zzstoatzz", email = "thrast36@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "marvin@git+https://github.com/PrefectHQ/marvin-3.git",
    "alembic>=1.14.0",
]


[project.optional-dependencies]
dev = ["ruff", "ipython"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 80
target-version = "py312"


[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I", "D"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }
ignore = ["D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "single"

[tool.alembic]
script_location = "backend/migrations"
sqlalchemy.url = "sqlite:///app.db"
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(rev)s_%%(slug)s"

[project.scripts]
structured = "structured:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
